--- a/issuetracker.mvc/Views/Home/Index.cshtml
+++ b/issuetracker.mvc/Views/Home/Index.cshtml
@@ -1,21 +1,7 @@
-﻿@model IEnumerable<Project>
-@{
+﻿@{
     ViewData["Title"] = "Home Page";
 }
 
 <div class="text-center">
-    @if (Model.Count() == 0)
-    {
-        <h1>No Projects yet</h1>
-    }
-    else
-    {
-        foreach (var pro in Model)
-        {
-            <h1>
-                @pro.Name
-            </h1>
-        }
-    }
-
+    <h1>Dashboard</h1>
 </div>
