add using viewsmodel

--- a/issuetracker.mvc/Views/_ViewImports.cshtml
+++ b/issuetracker.mvc/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using issuetracker.mvc
 @using issuetracker.mvc.Models
 @using issuetracker.Entities
+@using issuetracker.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
