--- a/issuetracker.mvc/Views/Shared/_Layout.cshtml
+++ b/issuetracker.mvc/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="position-sticky top-0" style="z-index: 10;">
         <partial name="_Navbar" />
     </header>
     <div class="container-fluid d-flex px-0" style="min-height: 90vh;">
