--- a/issuetracker.mvc/Views/Projects/Index.cshtml
+++ b/issuetracker.mvc/Views/Projects/Index.cshtml
@@ -6,7 +6,7 @@
 <div class="container-fluid my-3">
 	<div class="row px-3 ">
 		<div class="col text-end">
-			<a asp-action="create" asp-controller="projects" class="btn btn-outline-info">
+			<a asp-action="create" asp-controller="projects" class="btn btn-info">
 				Create Project
 			</a>
 		</div>
