--- a/issuetracker.mvc/Views/Projects/Create.cshtml
+++ b/issuetracker.mvc/Views/Projects/Create.cshtml
@@ -5,9 +5,9 @@
 
 <div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-6 mx-auto">
+		<div class="col-md-6 mx-auto p-4 mt-5 rounded-3 boxshadow">
 			<form asp-action="create" asp-controller="projects" method="post">
-				<legend class="text-info text-center mb-4">Create New Project</legend>
+				<legend class="text-info mb-4">Create New Project</legend>
 
 				<div class="form-group my-3">
 					<label asp-for="Name" class="form-label fw-bold text-muted"></label>
