--- a/issuetracker.mvc/Views/Shared/_Layout.cshtml
+++ b/issuetracker.mvc/Views/Shared/_Layout.cshtml
@@ -19,16 +19,16 @@
 
         <partial name="_Sidebar" />
 
-        <main role="main" class="pb-3 flex-grow-1">
+        <main role="main" class="flex-grow-1">
             @RenderBody()
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    @* <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2022 - issuetracker.mvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        &copy; 2022 - issuetracker.mvc - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
-    </footer>
+        </footer> *@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
