--- a/issuetracker.mvc/Views/_ViewImports.cshtml
+++ b/issuetracker.mvc/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using issuetracker.mvc.Models
 @using issuetracker.Entities
 @using issuetracker.ViewModels
+@using Microsoft.AspNetCore.Identity;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
