--- a/issuetracker.mvc/Views/Account/Login.cshtml
+++ b/issuetracker.mvc/Views/Account/Login.cshtml
@@ -3,18 +3,18 @@
 	ViewData["Title"] = "Log in";
 }
 
-<div class="container-fluid">
+<div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-5 mx-auto bg-white mt-5 rounded-3 py-5 px-4 boxshadow">
+		<div class="col-md-4 mx-auto rounded-3 p-4 boxshadow">
 			<form asp-action="login" asp-controller="account" method="post">
-				<legend class="text-primary">Login</legend>
+				<legend class="text-primary mb-4">Login</legend>
 				<div class="text-danger" asp-validation-summary="All"></div>
-				<div class="form-group my-2">
+				<div class="form-group my-3">
 					<label asp-for="Email" class="form-label fw-bold text-muted"></label>
 					<input asp-for="Email" class="form-control">
 					<span class="text-danger" asp-validation-for="Email"></span>
 				</div>
-				<div class="form-group my-2">
+				<div class="form-group my-3">
 					<label asp-for="Password" class="form-label fw-bold text-muted"></label>
 					<input asp-for="Password" class="form-control">
 					<span class="text-danger" asp-validation-for="Password"></span>
