--- a/issuetracker.mvc/Views/Projects/Create.cshtml
+++ b/issuetracker.mvc/Views/Projects/Create.cshtml
@@ -5,9 +5,11 @@
 
 <div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-6 mx-auto p-4 mt-5 rounded-3 boxshadow">
+		<div class="col-md-5 mx-auto p-4 rounded-3 boxshadow">
 			<form asp-action="create" asp-controller="projects" method="post">
-				<legend class="text-info mb-4">Create New Project</legend>
+				<legend class="text-dark mb-4">Create New Project</legend>
+
+				<div class="text-danger" asp-validation-summary="All"></div>
 
 				<div class="form-group my-3">
 					<label asp-for="Name" class="form-label fw-bold text-muted"></label>
@@ -27,8 +29,8 @@
 					<span asp-validation-for="TargetEndDate" class="text-danger"></span>
 				</div>
 
-				<div class="col-md-4">
-					<input type="submit" value="Create" class="btn btn-outline-info w-100 mt-4"></input>
+				<div class="form-group my-3">
+					<input type="submit" value="Create" class="btn btn-outline-dark w-100 mt-4"></input>
 				</div>
 
 			</form>
