--- a/issuetracker.mvc/Views/Shared/_Navbar.cshtml
+++ b/issuetracker.mvc/Views/Shared/_Navbar.cshtml
@@ -1,9 +1,17 @@
 @inject SignInManager<AppUser> signInManager;
+@inject UserManager<AppUser> userManager;
+@{
+	AppUser user = new();
+	if (signInManager.IsSignedIn(User))
+	{
+		user = await userManager.FindByEmailAsync(User.Identity.Name);
+	}
+}
 
 <nav class="navbar-light bg-white border-bottom box-shadow p-2">
 	<div class="container-fluid d-flex align-items-center ">
 
-		<button class="me-4 border border-light activeclick" id="sidebar_toggle_btn">
+		<button class="me-4 border border-light activelink" id="sidebar_toggle_btn">
 			<i class="bi bi-list h4"></i>
 		</button>
 
@@ -12,18 +20,22 @@
 			IssueTracker
 		</a>
 
-		<div class="ms-auto">
+		<div class="ms-auto d-flex align-items-center">
 			@if (signInManager.IsSignedIn(User))
 			{
-				<h6>
-					@User.Identity.Name
-				</h6>
+				<div class="me-4">
+					<form asp-action="logout" asp-controller="account" method="post">
+						<input type="submit" class="btn btn-light px-0" value="Log out">
+					</form>
+				</div>
+
+				<img src="/img/@user.Image" class="img-fluid rounded-circle boxshadow" width="35px" height="35px">
 
 			}
 			else
 			{
 				<a asp-action="login" asp-controller="account"
-				class="text-dark text-decoration-none activeclick px-2 py-1 rounded-pill">SignIn</a>
+				class="text-dark text-decoration-none activelink px-2 py-1 rounded-pill">SignIn</a>
 			}
 		</div>
 
