--- a/issuetracker.mvc/Views/Adminstration/EditRole.cshtml
+++ b/issuetracker.mvc/Views/Adminstration/EditRole.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-4 mx-auto boxshadow py-4 ">
+		<div class="col-md-6 ms-5">
 			<form asp-action="EditRole" asp-controller="adminstration" method="post">
 				<legend class="text-dark mb-4">Edit Role</legend>
 
@@ -21,7 +21,7 @@
 
 				<div class="d-flex align-items-center gap-3 my-3">
 					<button type="submit" class="btn btn-outline-dark w-25">Update</button>
-					<a asp-action="ListRoles" asp-controller="adminstration" class="btn btn-outline-primary w-25">Cancel</a>
+					<a asp-action="ListRoles" asp-controller="adminstration" class="btn btn-primary w-25">Cancel</a>
 				</div>
 
 
