--- a/issuetracker.mvc/Views/Adminstration/EditUsersInRole.cshtml
+++ b/issuetracker.mvc/Views/Adminstration/EditUsersInRole.cshtml
@@ -6,9 +6,9 @@
 
 <div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-4 mt-5 mx-auto">
+		<div class="col-md-5 ms-5">
 			<form asp-action="editusersinrole" asp-controller="adminstration" asp-route-roleId="@roleId" method="post">
-				<div class="card boxshadow">
+				<div class="card">
 					<div class="card-header bg-dark text-light">Add or Remove user to This role</div>
 					<div class="card-body">
 						@for (int i = 0; i < Model.Count; i++)
@@ -24,7 +24,7 @@
 					<div class="card-footer d-flex gap-2 align-items-center">
 						<input type="submit" class="btn btn-outline-dark w-50" value="Update">
 						<a asp-action="EditRole" asp-controller="adminstration" asp-route-id="@roleId"
-							class="btn btn-outline-primary w-50">Cancel</a>
+							class="btn btn-primary w-50">Cancel</a>
 					</div>
 				</div>
 			</form>
