--- a/issuetracker.mvc/Views/Adminstration/ListRoles.cshtml
+++ b/issuetracker.mvc/Views/Adminstration/ListRoles.cshtml
@@ -29,26 +29,26 @@
 				<h4>All Roles</h4>
 			</div>
 
-			<div class="col-11 mx-auto">
 
-				<div class="row">
-					<div class="col-4 fw-bold">Name</div>
-					<div class="col-4"></div>
-					<div class="col-4 fw-bold">Role Id</div>
-				</div>
-
-
+			<div class="row gap-4 mx-auto">
 				@foreach (var role in Model)
 				{
-					<div class="row projectRow py-3 my-3 boxshadow rounded-3 border-start border-5 border-success">
-
-						<div class="col-2 fw-bold text-primary">@role.NormalizedName</div>
-
-						<div class="col-6">
-							<div class="d-flex flex-wrap align-items-center gap-3">
+					<div class="col-md-5">
+						<div class="card">
+							<div class="card-header bg-primary text-light">
+								Role Id : @role.Id
+							</div>
+							<div class="card-body">
+								<h6>Role Name :
+									<span class="text-primary">
+										@role.NormalizedName
+									</span>
+								</h6>
+							</div>
+							<div class="card-footer d-flex align-items-center gap-3" style="position: relative;">
 
 								<a asp-action="EditRole" asp-controller="adminstration" asp-route-id="@role.Id"
-							class="btn btn-outline-secondary">
+							class="btn btn-outline-primary">
 									Edit
 								</a>
 
@@ -56,27 +56,74 @@
 							class="d-flex">
 
 
-									<a id="delete_btn_@role.Id" onclick="confirmDelete('@role.Id')" class="btn btn-outline-danger">
+									<a id="delete_btn_@role.Id" onclick="confirmDelete('@role.Id')" class="btn btn-danger">
 										Delete
 									</a>
 
-									<div class="gap-2 align-items-center justify-content-center" id="delete_confirm_@role.Id"
-								style="display: none;">
-										<p class="text-danger m-0">Are you sure you want to delete?</p>
-										<button type="submit" class="btn btn-primary btn-sm">Yes</button>
-										<a class="btn btn-primary btn-sm" onclick="cancelDelete('@role.Id')">No</a>
+									<div class="gap-2 text-center bg-white boxshadow border p-2 rounded-3" id="delete_confirm_@role.Id"
+								style="position: absolute; bottom: -20px; right:-30px; display: none;">
+										<p class="m-2">Are you sure you want to delete this role?</p>
+										<button type="submit" class="btn btn-outline-danger btn-sm px-3">Yes</button>
+										<a class="btn btn-primary btn-sm px-3" onclick="cancelDelete('@role.Id')">No</a>
 									</div>
 
 									<div asp-validation-summary="All" class="text-danger"></div>
 								</form>
+
 							</div>
 						</div>
-
-						<div class="col-4 text-muted">@role.Id</div>
 					</div>
 				}
-
 			</div>
+
+			@* <div class="col-11 mx-auto">
+
+				<div class="row">
+				<div class="col-4 fw-bold">Name</div>
+				<div class="col-4"></div>
+				<div class="col-4 fw-bold">Role Id</div>
+				</div> *@
+
+			@*
+				@foreach (var role in Model)
+				{
+				<div class="row projectRow py-3 my-3 boxshadow rounded-3 border-start border-5 border-success">
+
+				<div class="col-2 fw-bold text-primary">@role.NormalizedName</div>
+
+				<div class="col-6">
+				<div class="d-flex flex-wrap align-items-center gap-3">
+
+				<a asp-action="EditRole" asp-controller="adminstration" asp-route-id="@role.Id"
+				class="btn btn-outline-secondary">
+				Edit
+				</a>
+
+				<form method="post" asp-action="DeleteRole" asp-controller="Adminstration" asp-route-id="@role.Id"
+				class="d-flex">
+
+
+				<a id="delete_btn_@role.Id" onclick="confirmDelete('@role.Id')" class="btn btn-outline-danger">
+				Delete
+				</a>
+
+				<div class="gap-2 align-items-center justify-content-center" id="delete_confirm_@role.Id"
+				style="display: none;">
+				<p class="text-danger m-0">Are you sure you want to delete?</p>
+				<button type="submit" class="btn btn-outline-danger btn-sm">Yes</button>
+				<a class="btn btn-primary btn-sm" onclick="cancelDelete('@role.Id')">No</a>
+				</div>
+
+				<div asp-validation-summary="All" class="text-danger"></div>
+				</form>
+				</div>
+				</div>
+
+				<div class="col-4 text-muted">@role.Id</div>
+				</div>
+				} *@
+
+			@* </div> *@
 
 		</div>
 	}
@@ -89,8 +136,7 @@
 	const confirmDelete = (id) => {
 		let delete_btn = document.getElementById(`delete_btn_${id}`);
 		let delete_confirm = document.getElementById(`delete_confirm_${id}`);
-		delete_btn.style.display = "none";
-		delete_confirm.style.display = "flex";
+		delete_confirm.style.display = "block";
 
 	}
 
@@ -98,7 +144,6 @@
 		let delete_btn = document.getElementById(`delete_btn_${id}`);
 		let delete_confirm = document.getElementById(`delete_confirm_${id}`);
 
-		delete_btn.style.display = "block";
 		delete_confirm.style.display = "none"
 
 	}
