--- a/issuetracker.mvc/Views/Projects/Project.cshtml
+++ b/issuetracker.mvc/Views/Projects/Project.cshtml
@@ -1,12 +1,158 @@
-@model Project
+@model ProjectDetailViewModel
 @{
 	ViewData["Title"] = Model.Name;
 }
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="col">
-			@Model.Name
+<div class="container-fluid my-3">
+
+	<div class="row me-2">
+		<div class="col text-end">
+			<a asp-action="Edit" asp-controller="projects" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
+			<button class="btn btn-danger">Delete</button>
 		</div>
+	</div>
+
+	<div class="row">
+
+		<h5 class="text-primary fw-bold text-uppercase">
+			@Model.Name
+		</h5>
+
+	</div>
+
+	<div class="row px-3 my-4">
+
+		<div class="col-6">
+
+			<div class="container-fluid px-0">
+
+				<div class="row">
+					<div class="col-4">
+						<h6 class="text-muted">Start Date</h6>
+					</div>
+					<div class="col-4">
+						<h6 class="text-muted">Target End Date</h6>
+					</div>
+					<div class="col-4">
+						<h6 class="text-muted">Actual End Date</h6>
+					</div>
+				</div>
+
+				<div class="row">
+					<div class="col-4">
+						@Model.StartDate.ToShortDateString()
+					</div>
+					<div class="col-4">
+						@Model.TargetEndDate.ToShortDateString()
+					</div>
+					<div class="col-4">
+						@Model.ActualEndDate.ToShortDateString()
+					</div>
+				</div>
+
+			</div>
+
+			<div class="container-fluid px-0 my-4">
+
+				<div class="row">
+
+					<div class="col-4">
+						<h6 class="text-muted">
+							Created on
+						</h6>
+					</div>
+
+					<div class="col-4">
+						<h6 class="text-muted">
+							Created by
+						</h6>
+					</div>
+
+				</div>
+
+				<div class="row">
+
+					<div class="col-4">
+						@Model.CreatedOn.ToShortDateString()
+					</div>
+					<div class="col-4">
+						@Model.CreatedBy
+					</div>
+
+				</div>
+
+			</div>
+
+		</div>
+
+		<div class="col-4 ms-auto">
+
+			<div class="container-fluid px-0">
+				<div class="row">
+					<div class="col">
+						<h6 class="text-muted">
+							Assigned To
+						</h6>
+					</div>
+				</div>
+
+				<div class="row">
+
+					@if (Model.AssignedTo.Count() == 0)
+					{
+						<div class="col">
+							<p>No Users yet</p>
+						</div>
+					}
+					else
+					{
+						<div class="col">
+							<div class="row">
+								<div class="col-4">
+									<p class="text-muted">
+										Name
+									</p>
+								</div>
+								<div class="col-4">
+									<p class="text-muted">
+										Email
+									</p>
+								</div>
+								<div class="col-4">
+									<p class="text-muted">
+										Roles
+									</p>
+								</div>
+							</div>
+
+							@foreach (var user in Model.AssignedTo)
+							{
+								<div class="row">
+									<div class="col-4">
+										@user.Name
+									</div>
+									<div class="col-4">
+										@user.Email
+									</div>
+									<div class="col-4">
+										@foreach (var role in user.Roles)
+										{
+											<li>@role</li>
+										}
+									</div>
+								</div>
+							}
+						</div>
+					}
+
+
+
+				</div>
+			</div>
+
+
+		</div>
+
+
 	</div>
 </div>
