--- a/issuetracker.mvc/Views/Adminstration/EditRole.cshtml
+++ b/issuetracker.mvc/Views/Adminstration/EditRole.cshtml
@@ -5,7 +5,7 @@
 
 <div class="container-fluid my-3">
 	<div class="row">
-		<div class="col-md-6 ms-5">
+		<div class="col-md-6 ms-md-4">
 			<form asp-action="EditRole" asp-controller="adminstration" method="post">
 				<legend class="text-dark mb-4">Edit Role</legend>
 
