--- a/issuetracker.mvc/Views/Projects/Project.cshtml
+++ b/issuetracker.mvc/Views/Projects/Project.cshtml
@@ -113,10 +113,16 @@
 								<div class="row my-2 py-2 align-items-center border-start border-5 
 								border-info rounded-3 boxshadow">
 
-									<div class="col-8">
-										<img src="/img/@user.Image" class="img-fluid rounded-circle boxshadow me-2" width="35px" height="35px"
-									alt="">
-										@user.Email
+									<div class="col-8 d-flex align-items-center">
+										<img src="/img/@user.Image" class="rounded-circle boxshadow me-3" width="35px" height="35px" alt="">
+										<div>
+											<p class="my-0 fw-bold">
+												@user.Name
+											</p>
+											<p class="my-0">
+												@user.Email
+											</p>
+										</div>
 									</div>
 									<div class="col-4">
 										@foreach (var role in user.Roles)
