--- a/issuetracker.mvc/Views/Projects/Create.cshtml
+++ b/issuetracker.mvc/Views/Projects/Create.cshtml
@@ -29,8 +29,8 @@
 					<span asp-validation-for="TargetEndDate" class="text-danger"></span>
 				</div>
 
-				<div class="form-group my-3">
-					<input type="submit" value="Create" class="btn btn-outline-dark w-100 mt-4"></input>
+				<div class="form-group text-end my-3">
+					<input type="submit" value="Create" class="btn btn-dark"></input>
 				</div>
 
 			</form>
