--- a/issuetracker.mvc/Views/Projects/Index.cshtml
+++ b/issuetracker.mvc/Views/Projects/Index.cshtml
@@ -20,7 +20,7 @@
 		}
 		else
 		{
-			<div class="col-8 ms-md-5 gap-5">
+			<div class="col-md-8 ms-md-5 gap-5">
 				<div class="row py-3">
 					<div class="col-3 fw-bold">Name</div>
 					<div class="col-3 fw-bold">Start Date</div>
