--- a/issuetracker.mvc/Views/Projects/Project.cshtml
+++ b/issuetracker.mvc/Views/Projects/Project.cshtml
@@ -5,17 +5,16 @@
 
 <div class="container-fluid my-3">
 
-	<div class="row me-2">
-		<div class="col text-end">
+	<div class="row me-2 mb-5">
+		<div class="col-8">
+			<h4 class="text-dark text-uppercase" style="letter-spacing: 2px;">
+				@Model.Name
+			</h4>
+		</div>
+		<div class="col-4 text-end">
 			<a asp-action="Edit" asp-controller="projects" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
 			<button class="btn btn-danger">Delete</button>
 		</div>
-	</div>
-
-	<div class="row">
-		<h4 class="text-dark text-uppercase" style="letter-spacing: 2px;">
-			@Model.Name
-		</h4>
 	</div>
 
 	<div class="row px-3 my-4">
@@ -82,6 +81,9 @@
 			</div>
 
 		</div>
+
+
+		@* users column *@
 
 		<div class="col-md-4 ms-auto">
 
