add link to create issue

--- a/issuetracker.mvc/Views/Shared/_Sidebar.cshtml
+++ b/issuetracker.mvc/Views/Shared/_Sidebar.cshtml
@@ -6,7 +6,7 @@
 	<div id="mySidenav" class="sidenav text-center ps-3 pe-1" style="position: sticky; left: 0; top: 3.3rem;">
 
 		<div class="mt-3 text-start">
-			<a href="" class="btn btn-outline-danger rounded-3">Create New Issue</a>
+			<a asp-action="create" asp-controller="issues" class="btn btn-outline-danger rounded-3">Create New Issue</a>
 		</div>
 
 		<div class="mt-5">
@@ -30,7 +30,8 @@
 			</div>
 			
 			<div class="my-2">
-				<a href="" class="btn w-100 text-start sidebarLink">
+				<a asp-action="index" asp-controller="issues"
+					class=@(Context.Request.Path.ToString().StartsWith("/issues") ? "btn-primary btn w-100 text-start" : "sidebarLink btn w-100 text-start")>
 					<i class="bi bi-x-diamond"></i>
 					&nbsp;Issues
 				</a>
