--- a/issuetracker.mvc/Views/Issues/Create.cshtml
+++ b/issuetracker.mvc/Views/Issues/Create.cshtml
@@ -51,7 +51,7 @@
 
 				<div class="form-group my-3">
 					<label asp-for="Tags" class="form-label text-muted fw-bold"></label>
-					<button type="button" class="btn btn-sm btn-outline-primary ms-5" onclick="NewTag()">New Tag</button>
+					<a class="btn btn-sm btn-outline-primary ms-5" onclick="NewTag()">New Tag</a>
 
 					<div class="row mt-3 w-50">
 						@for (int i = 0; i < Model.Tags.Count; i++)
