--- a/issuetracker.mvc/Views/Issues/Index.cshtml
+++ b/issuetracker.mvc/Views/Issues/Index.cshtml
@@ -11,12 +11,8 @@
 
 	<div class="row mx-2">
 		<div class="col ms-md-4">
-			<div class="row mb-4">
-				<div class="col-4 fw-bold">Title</div>
-				<div class="col-4 fw-bold">Project</div>
-				<div class="col-2 fw-bold">Status</div>
-				<div class="col-2 fw-bold">Priority</div>
-			</div>
+
+
 			@if (Model.Count() == 0)
 			{
 				<div class="row">
@@ -27,7 +23,14 @@
 			}
 			else
 			{
-				foreach (var issue in Model)
+				<div class="row mb-4">
+					<div class="col-4 fw-bold">Title</div>
+					<div class="col-4 fw-bold">Project</div>
+					<div class="col-2 fw-bold">Status</div>
+					<div class="col-2 fw-bold">Priority</div>
+				</div>
+
+				@foreach (var issue in Model)
 				{
 					<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
 				class="text-dark text-decoration-none">
