--- a/issuetracker.mvc/Views/Projects/Project.cshtml
+++ b/issuetracker.mvc/Views/Projects/Project.cshtml
@@ -11,15 +11,29 @@
 				@Model.Name
 			</h4>
 		</div>
-		<div class="col-4 text-end">
+		<div class="col-4 position-relative d-flex gap-1 justify-content-end">
 			<a asp-action="Edit" asp-controller="projects" asp-route-id="@Model.Id" class="btn btn-outline-primary">Edit</a>
-			<button class="btn btn-danger">Delete</button>
+
+
+			<form asp-action="delete" asp-controller="projects" asp-route-id="@Model.Id" method="post" class="">
+				<a onclick="confirmDeleteProject()" class="btn btn-danger">Delete</a>
+
+				<div id="confirmDeleteProjectBox" class="gap-2 text-center bg-white boxshadow border p-2 rounded-3"
+					style="position: absolute; bottom: -20px; right: 0px; display: none;">
+					<p class="m-2">Are you sure you want to delete this project?</p>
+					<button type="submit" class="btn btn-outline-danger btn-sm px-3">Yes</button>
+					<a class="btn btn-primary btn-sm px-3" onclick="cancelDeleteProject()">No</a>
+				</div>
+
+			</form>
+
+
 		</div>
 	</div>
 
 	<div class="row px-3 my-4">
 
-		<div class="col-md-7">
+		<div class="col-md-8">
 
 			<div class="container-fluid px-0">
 
@@ -79,6 +93,204 @@
 				</div>
 
 			</div>
+
+
+			<div class="container-fluid px-0 pe-4 my-5 py-4">
+				<div class="row">
+					<div class="col">
+						<h6 class="text-danger fw-bold">
+							Over Due Issues
+						</h6>
+					</div>
+				</div>
+				<div class="row">
+					@if (Model.OverDueIssues.Count > 0)
+					{
+						<div class="col">
+							@foreach (var issue in Model.OverDueIssues)
+							{
+								<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
+							class="text-dark text-decoration-none">
+									<div class="row projectRow py-3 boxshadow my-3 border-start border-5 rounded-3 
+										@(issue.Status=="Closed" ? "border-success" : "border-danger")">
+										<div class="col-4 fw-bold">@issue.Title</div>
+										<div class="col-4">@issue.ProjectName</div>
+										<div class="col-2">
+											<p class="@(issue.Status=="Closed" ? "bg-success" : "bg-danger") px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content;">
+												@issue.Status
+											</p>
+										</div>
+										<div class="col-2">
+											<p class="px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content; background-color: @issue.Priority.Color;">
+												@issue.Priority.Name
+											</p>
+										</div>
+									</div>
+								</a>
+							}
+						</div>
+					}
+					else
+					{
+						<div>
+							<h6>No over Due Issues</h6>
+						</div>
+					}
+				</div>
+			</div>
+
+
+
+
+
+
+
+			<div class="container-fluid px-0 pe-4 my-5 py-4">
+				<div class="row">
+					<div class="col">
+						<h6 class="text-warning fw-bold">
+							Un Assigned Issues
+						</h6>
+					</div>
+				</div>
+				<div class="row">
+					@if (Model.UnAssignedIssued.Count > 0)
+					{
+						<div class="col">
+							@foreach (var issue in Model.UnAssignedIssued)
+							{
+								<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
+							class="text-dark text-decoration-none">
+									<div class="row projectRow py-3 boxshadow my-3 border-start border-5 rounded-3 
+										@(issue.Status=="Closed" ? "border-success" : "border-danger")">
+										<div class="col-4 fw-bold">@issue.Title</div>
+										<div class="col-4">@issue.ProjectName</div>
+										<div class="col-2">
+											<p class="@(issue.Status=="Closed" ? "bg-success" : "bg-danger") px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content;">
+												@issue.Status
+											</p>
+										</div>
+										<div class="col-2">
+											<p class="px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content; background-color: @issue.Priority.Color;">
+												@issue.Priority.Name
+											</p>
+										</div>
+									</div>
+								</a>
+							}
+						</div>
+					}
+					else
+					{
+						<div>
+							<h6>No UnAssigned Issues</h6>
+						</div>
+					}
+				</div>
+			</div>
+
+
+
+
+
+			<div class="container-fluid px-0 pe-4 my-5 py-4">
+				<div class="row">
+					<div class="col">
+						<h6 class="text-primary fw-bold">
+							Open Issues
+						</h6>
+					</div>
+				</div>
+				<div class="row">
+					@if (Model.OpenIssues.Count() > 0)
+					{
+						<div class="col">
+							@foreach (var issue in Model.OpenIssues)
+							{
+								<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
+							class="text-dark text-decoration-none">
+									<div class="row projectRow py-3 boxshadow my-3 border-start border-5 rounded-3 
+										@(issue.Status=="Closed" ? "border-success" : "border-danger")">
+										<div class="col-4 fw-bold">@issue.Title</div>
+										<div class="col-4">@issue.ProjectName</div>
+										<div class="col-2">
+											<p class="@(issue.Status=="Closed" ? "bg-success" : "bg-danger") px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content;">
+												@issue.Status
+											</p>
+										</div>
+										<div class="col-2">
+											<p class="px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content; background-color: @issue.Priority.Color;">
+												@issue.Priority.Name
+											</p>
+										</div>
+									</div>
+								</a>
+							}
+						</div>
+					}
+					else
+					{
+						<div>
+							<h6>No Open Issues</h6>
+						</div>
+					}
+				</div>
+			</div>
+
+
+			<div class="container-fluid px-0 pe-4 my-5 py-4">
+				<div class="row">
+					<div class="col">
+						<h6 class="text-success fw-bold">
+							Closed Issues
+						</h6>
+					</div>
+				</div>
+				<div class="row">
+					@if (Model.ClosedIssue.Count() > 0)
+					{
+						<div class="col">
+							@foreach (var issue in Model.ClosedIssue)
+							{
+								<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
+							class="text-dark text-decoration-none">
+									<div class="row projectRow py-3 boxshadow my-3 border-start border-5 rounded-3 
+										@(issue.Status=="Closed" ? "border-success" : "border-danger")">
+										<div class="col-4 fw-bold">@issue.Title</div>
+										<div class="col-4">@issue.ProjectName</div>
+										<div class="col-2">
+											<p class="@(issue.Status=="Closed" ? "bg-success" : "bg-danger") px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content;">
+												@issue.Status
+											</p>
+										</div>
+										<div class="col-2">
+											<p class="px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
+										style="width: fit-content; background-color: @issue.Priority.Color;">
+												@issue.Priority.Name
+											</p>
+										</div>
+									</div>
+								</a>
+							}
+						</div>
+					}
+					else
+					{
+						<div>
+							<h6>No Closed Issues</h6>
+						</div>
+					}
+				</div>
+			</div>
+
+
 
 		</div>
 
@@ -154,3 +366,16 @@
 
 	</div>
 </div>
+
+
+
+
+<script>
+	function confirmDeleteProject() {
+		document.getElementById('confirmDeleteProjectBox').style.display = 'block';
+	}
+
+	function cancelDeleteProject() {
+		document.getElementById('confirmDeleteProjectBox').style.display = 'none';
+	}
+</script>
