change craete issue style

--- a/issuetracker.mvc/Views/Issues/Create.cshtml
+++ b/issuetracker.mvc/Views/Issues/Create.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="container-fluid my-3">
-	<div class="row">
-		<div class="col-md-8 mx-auto p-4 rounded-3 boxshadow">
+	<div class="row mx-md-3">
+		<div class="col-md-8">
 			<form asp-action="create" asp-controller="issues" method="post">
 				<legend class="text-dark mb-4">Create New Issue</legend>
 
@@ -37,21 +37,24 @@
 				</div>
 
 
-				<div id="createTagContainer" class="border p-4 mt-2 justify-content-between w-50" style="display: none;">
-					<div class="form-group my-3">
-						<label asp-for="CreateTagViewModel.Color" class="form-label text-muted fw-bold"></label>
-						<input type="color" asp-for="CreateTagViewModel.Color" class="form-control form-control-color">
-					</div>
-					<div class="from-group my-3">
-						<label asp-for="CreateTagViewModel.Name" class="form-label text-muted fw-bold"></label>
-						<input class="form-control" asp-for="CreateTagViewModel.Name">
-					</div>
-				</div>
+
 
 
 				<div class="form-group my-3">
 					<label asp-for="Tags" class="form-label text-muted fw-bold"></label>
 					<a class="btn btn-sm btn-outline-primary ms-5" onclick="NewTag()">New Tag</a>
+
+					<div id="createTagContainer" class="border p-4 mt-2 justify-content-between w-50 boxshadow rounded-3"
+						style="display: none;">
+						<div class="from-group my-3">
+							<label asp-for="CreateTagViewModel.Name" class="form-label text-muted fw-bold"></label>
+							<input class="form-control" asp-for="CreateTagViewModel.Name">
+						</div>
+						<div class="form-group my-3">
+							<label asp-for="CreateTagViewModel.Color" class="form-label text-muted fw-bold"></label>
+							<input type="color" asp-for="CreateTagViewModel.Color" class="form-control form-control-color">
+						</div>
+					</div>
 
 					<div class="row mt-3 w-50">
 						@for (int i = 0; i < Model.Tags.Count; i++)
@@ -60,7 +63,7 @@
 								<input type="hidden" asp-for="@Model.Tags[i].TagId">
 								<input asp-for="@Model.Tags[i].IsSelected">
 								<label asp-for="@Model.Tags[i].IsSelected">
-									<p class="my-0 rounded-pill px-3 py-1 text-lowercase"
+									<p class="my-0 rounded px-2 py-0 text-lowercase"
 									style="width: fit-content; background-color: @Model.Tags[i].Color;">
 										@Model.Tags[i].Name</p>
 								</label>
