--- a/issuetracker.mvc/Views/Issues/Index.cshtml
+++ b/issuetracker.mvc/Views/Issues/Index.cshtml
@@ -7,7 +7,7 @@
 
 	@* Row for filters *@
 	<div class="row mx-2 mb-5">
-		<div class="col ms-md-4 bg-secondary py-3 px-4 rounded-3 boxshadow">
+		<div class="col ms-md-4 bg-success py-3 px-4 rounded-3 boxshadow">
 			<form asp-action="index" asp-controller="issues" method="get"
 				class="d-flex align-items-end justify-content-between">
 
@@ -71,29 +71,7 @@
 					<div class="col-2 fw-bold">Priority</div>
 				</div>
 
-				@foreach (var issue in Model.issueViewModels)
-				{
-					<a asp-action="issue" asp-controller="issues" asp-route-id="@issue.IssueId"
-				class="text-dark text-decoration-none">
-						<div class="row projectRow py-3 boxshadow my-3 border-start border-5 rounded-3 
-				@(issue.Status=="Closed" ? "border-success" : "border-danger")">
-							<div class="col-4 fw-bold">@issue.Title</div>
-							<div class="col-4">@issue.ProjectName</div>
-							<div class="col-2">
-								<p class="@(issue.Status=="Closed" ? "bg-success" : "bg-danger") px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
-							style="width: fit-content;">
-									@issue.Status
-								</p>
-							</div>
-							<div class="col-2">
-								<p class="px-3 py-1 rounded-pill my-0 text-lowercase boxshadow"
-							style="width: fit-content; background-color: @issue.Priority.Color;">
-									@issue.Priority.Name
-								</p>
-							</div>
-						</div>
-					</a>
-				}
+				<partial name="_Issues" model="@Model.issueViewModels" />
 
 			}
 		</div>
