--- a/issuetracker.mvc/Views/Projects/Create.cshtml
+++ b/issuetracker.mvc/Views/Projects/Create.cshtml
@@ -4,8 +4,8 @@
 }
 
 <div class="container-fluid my-3">
-	<div class="row">
-		<div class="col-md-5 mx-auto p-4 rounded-3 boxshadow">
+	<div class="row ms-md-3">
+		<div class="col-md-7 rounded-3">
 			<form asp-action="create" asp-controller="projects" method="post">
 				<legend class="text-dark mb-4">Create New Project</legend>
 
