--- a/issuetracker.mvc/Views/Projects/Index.cshtml
+++ b/issuetracker.mvc/Views/Projects/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<Project>
+@model List<ProjectViewModel>
 @{
 	ViewData["Title"] = "Projects";
 }
@@ -28,18 +28,7 @@
 					<div class="col-3 fw-bold">Actual End Date</div>
 				</div>
 
-				@foreach (var proj in Model)
-				{
-					<a asp-action="project" asp-controller="projects" asp-route-id="@proj.Slug"
-				style="color: black; text-decoration: none;">
-						<div class="projectRow row py-3 my-3 boxshadow rounded-3 border-start border-5 border-success">
-							<div class="col-3 h6">@proj.Name</div>
-							<div class="col-3">@proj.StartDate.ToShortDateString()</div>
-							<div class="col-3">@proj.TargetEndDate.ToShortDateString()</div>
-							<div class="col-3">@proj.ActualEndDate.ToShortDateString()</div>
-						</div>
-					</a>
-				}
+				<partial name="_Projects" model="@Model" />
 			</div>
 		}
 	</div>
